--- a/smwcon/2015fall/yearly/index.html
+++ b/smwcon/2015fall/yearly/index.html
@@ -45,8 +45,8 @@
 		<div class="reveal">
 			<div class="slides">
 				<section>
-					<h2>Yearly SMW overview</h2>
-					<p>
+					<h2><span class="shadow">Yearly SMW overview</span></h2>
+					<p class="shadow">
 						Presentation by <a href="https://twitter.com/JeroenDeDauw">@JeroenDeDauw</a><br /><br />
 						bit.ly/smw-2015<br /><br />
 						<a href="https://semantic-mediawiki.org/wiki/SMWCon_Fall_2015/Current_Status_and_Next_Steps_for_Semantic_MediaWiki">SMWCon Fall 2015, Barcelona</a>
@@ -173,7 +173,7 @@
 					</section>
 
 					<section data-transition="linear" data-background-video="img/all-kittens-responding-nominally.webm">
-						<p>All kittens responding nominally</p><br /><br /><br /><br /><br /><br /><br /><br /><br />
+						<p class="shadow">All kittens responding nominally</p><br /><br /><br /><br /><br /><br /><br /><br /><br />
 					</section>
 
 					<section data-transition="none" data-background="img/scrutinizer_stats.png">
@@ -193,7 +193,7 @@
 
 				<section>
 					<section data-background-video="img/cat-lapse.webm">
-						<p>New features in SMW 2.1 - 2.3</p>
+						<p class="shadow">New features in SMW 2.1 - 2.3</p>
 					</section>
 
 					<section>
@@ -313,13 +313,13 @@
 				</section>
 
 				<section data-background="img/cat-questions.jpg" data-transition="linear" data-background-transition="slide">
-					<br /><br /><br /><br /><br /><p class="shadow">Questions?</p><br /><br /><br /><br />
+					<br /><br /><br /><br /><br /><h2><span class="shadow">Questions?</span></h2><br /><br /><br /><br />
 
 					<p class="shadow">bit.ly/smw-2015</p>
 				</section>
 
 				<section data-transition="linear">
-					<h3 class="shadow">Special:Links</h3>
+					<h3><span class="shadow">Special:Links</span></h3>
 					<ul>
 						<li><a href="http://bit.ly/smw-2014" class="shadow">View slides bit.ly/smw-2015</a></li>
 						<li><a href="https://github.com/JeroenDeDauw/slides/" class="shadow">Slides on GitHub</a> (CC BY-SA 3.0 licensed)</li>
