--- a/smwcon/2015fall/yearly/index.html
+++ b/smwcon/2015fall/yearly/index.html
@@ -289,12 +289,12 @@
 				</section>
 
 				<section>
-					<section>
-						<h3>SMW 2.4 & 3.0</h3>
+					<section data-background="#005566">
+						<h3><span class="shadow">SMW 2.4 & 3.0</span></h3>
 					</section>
 
-					<section>
-						<p>MediaWiki compatibility</p>
+					<section data-background="#005555">
+						<h3><span class="shadow">MediaWiki compatibility</span></h3>
 
 						<table style="font-size: 30px;" class="no-bottom-border">
 							<tr><th>SMW 1.9</th><td style="color: #17ff2e">1.19</td><td>1.20</td><td>1.21</td><td>1.22</td><td></td><td></td><td></td><td></td><td></td></tr>
@@ -305,26 +305,28 @@
 						</table>
 					</section>
 
-					<section>
-						<p>PHP in SMW 3.x</p>
+					<section data-background="#006655">
+						<h3><span class="shadow">PHP in SMW 3.x</span></h3>
 
 						<ul>
 							<li>Full PHP 7 support</li>
-							<li class="fragment">Drop support for EOL PHP versions in SMW 3.0: 5.3 and 5.4</li>
-							<li class="fragment">Possibly drop fix-only PHP versions: 5.5</li>
+							<li class="fragment">Drop support for EOL PHP: 5.3 and 5.4</li>
+							<li class="fragment">Possibly drop fix-only PHP: 5.5</li>
 						</ul>
 
-						<p>Removals in SMW 3.x</p>
+						<br />
+						<br />
+						<h3 class="fragment"><span class="shadow">Removals in SMW 3.x</span></h3>
 
 						<ul>
-							<li>"type" namespace (deprecated in SMW 1.6)</li>
-							<li>Maintenance script aliases such as SMW_setup.php and SMW_refreshData.php (renamed in 2.0)</li>
-							<li>[possibly] Special:SemanticStatistics (Special:Statistics since 1.9)</li>
+							<li class="fragment">"type" namespace <small>(deprecated in SMW 1.6)</small></li>
+							<li class="fragment">Maintenance script aliases <small>such as SMW_setup.php (renamed in 2.0)</small></li>
+							<li class="fragment">Possibly Special:SemanticStatistics <small>(Special:Statistics since 1.9)</small></li>
 						</ul>
 					</section>
 
-					<section>
-						<p>New features</p>
+					<section data-background="#006060">
+						<h3><span class="shadow">New features</span></h3>
 						<p class="fragment">New quantity type?</p>
 						<p class="fragment">Multilingual support??</p>
 					</section>
@@ -332,13 +334,13 @@
 
 				<section>
 					<section data-background="#006650" data-transition="linear" data-background-transition="slide">
-						<h3>Contributing to the project</h3>
+						<h3><span class="shadow">Contributing to the project</span></h3>
 
 						<img src="img/teamwork.gif" />
 					</section>
 
 					<section data-background-video="img/why-u-no-play.webm">
-						<ul>
+						<ul style="font-size: 48px">
 							<li class="fragment shadow">Create feature requests</li>
 							<li class="fragment shadow">File bugs you encounter</li>
 							<li class="fragment shadow">Become part of the testers group</li>
