Add speaker notes

--- a/smwcon/2015fall/yearly/index.html
+++ b/smwcon/2015fall/yearly/index.html
@@ -69,6 +69,7 @@
 
 				<section data-transition="linear">
 					<img src="img/statistics_cat.jpg" alt="Y U NO LOAD" />
+					<aside class="notes">2 minutes</aside>
 				</section>
 
 				<section>
@@ -81,6 +82,8 @@
 							<span style="color:#17ff2e">~1500</span> code changes (up <span style="color:#17ff2e">~0%</span>, <span style="color:#17ff2e">~50%</span>)
 							<img src="img/commit_graph.jpg" alt="Y U NO LOAD">
 						</p>
+
+						<aside class="notes">3 minutes</aside>
 					</section>
 
 					<section>
@@ -100,6 +103,8 @@
 						<p class="fragment">New features but no b/c breaks? <span class="fragment">&#10140; <span style="color:#ffcccc">2</span>.<span style="color:#ccffcc">x</span></span></p>
 
 						<p class="fragment"><a href="http://semver.org/">semver.org</a></p>
+
+						<aside class="notes">4 minutes</aside>
 					</section>
 
 					<section>
@@ -111,6 +116,8 @@
 							<li><span style="color:#ffcccc">2</span>.<span style="color:#ccffcc">3</span>.<span style="color:#ccccff">0</span></li>
 						</ul>
 						<p><span style="color:#ccffcc">3</span> feature releases + <span style="color:#ccccff">6</span> bugfix releases</p>
+
+						<aside class="notes">5 minutes</aside>
 					</section>
 
 					<section>
@@ -143,6 +150,8 @@
 							<li>Niklas Laxström</li>
 							<li>TranslateWiki.net</li>
 						</ul>
+
+						<aside class="notes">6 minutes</aside>
 					</section>
 				</section>
 
@@ -150,6 +159,8 @@
 					<section>
 						<h3>Quality assurance</h3>
 						<img src="img/ops_problem.jpg" />
+
+						<aside class="notes">6 minutes</aside>
 					</section>
 
 					<section>
@@ -161,26 +172,33 @@
 							<span class="fragment">&#10140; <span style="color:#17ff2e">77%</span></span>
 						</p>
 						<img src="img/smw-tests.jpg" class="fragment" />
+
+						<aside class="notes">7 minutes</aside>
 					</section>
 
 					<section>
-							<img src="img/travis_history.png" alt="Y U NO LOAD">
+						<img src="img/travis_history.png" alt="Y U NO LOAD">
+						<aside class="notes">7 minutes</aside>
 					</section>
 
 					<section data-transition="linear">
 						<img src="img/travis_old.jpeg" alt="Y U NO LOAD">
+						<aside class="notes">8 minutes</aside>
 					</section>
 
 					<section data-transition="linear">
 						<img src="img/travis_build.png" alt="Y U NO LOAD">
+						<aside class="notes">8 minutes</aside>
 					</section>
 
 					<section data-transition="linear" data-background-video="img/all-kittens-responding-nominally.webm">
 						<p class="shadow">All kittens responding nominally</p><br /><br /><br /><br /><br /><br /><br /><br /><br />
+						<aside class="notes">8 minutes</aside>
 					</section>
 
 					<section data-transition="none" data-background="img/scrutinizer_stats.png">
 						<img src="img/scrutinizer_rating.jpg" alt="Y U NO LOAD">
+						<aside class="notes">9 minutes</aside>
 					</section>
 				</section>
 
@@ -191,7 +209,10 @@
 					<p class="fragment"><span style="color:#17ff2e">~5500</span> edits and <span style="color:#17ff2e">~1250</span> new pages on <a href="https://semantic-mediawiki.org/">semantic-mediawiki.org</a></p>
 					<p class="fragment">
 						<span style="color:#17ff2e">224 (174)</span> issues
-						<span class="fragment"><br />including <span style="color:#17ff2e">&gt;52</span> bugs and <span style="color:#17ff2e">&gt;32</span> feature requests</span></p>
+						<span class="fragment"><br />including <span style="color:#17ff2e">&gt;52</span> bugs and <span style="color:#17ff2e">&gt;32</span> feature requests</span>
+					</p>
+
+					<aside class="notes">10 minutes</aside>
 				</section>
 
 				<section>
@@ -204,20 +225,22 @@
 						<br />
 						<img src="img/frisbee.gif" class="fragment" data-fragment-index="1" />
 					</section>
+
+					<aside class="notes">11 minutes</aside>
 				</section>
 
 				<section>
-					<section>
-						<h3>Platform compatibility</h3>
+					<h3>Platform compatibility</h3>
 
-						<ul>
-							<li>Added <span style="color:#17ff2e">MediaWiki 1.24</span> support <span style="color:gray">(SMW 2.1)</span></li>
-							<li class="fragment">Added <span style="color:#17ff2e">MediaWiki 1.25</span> support <span style="color:gray">(SMW 2.2)</span></li>
-							<li class="fragment">Added <span style="color:#17ff2e">HHVM 3.3+</span> support <span style="color:gray">(SMW 2.1)</span></li>
-							<li class="fragment">Added <strong>beta</strong> support for <span style="color:#17ff2e">PHP 7</span> <span style="color:gray">(SMW 2.3)</span></li>
-							<li class="fragment">Added full <span style="color:#17ff2e">PostgreSQL</span> support <span style="color:gray">(SMW 2.3)</span></li>
-						</ul>
-					</section>
+					<ul>
+						<li>Added <span style="color:#17ff2e">MediaWiki 1.24</span> support <span style="color:gray">(SMW 2.1)</span></li>
+						<li class="fragment">Added <span style="color:#17ff2e">MediaWiki 1.25</span> support <span style="color:gray">(SMW 2.2)</span></li>
+						<li class="fragment">Added <span style="color:#17ff2e">HHVM 3.3+</span> support <span style="color:gray">(SMW 2.1)</span></li>
+						<li class="fragment">Added <strong>beta</strong> support for <span style="color:#17ff2e">PHP 7</span> <span style="color:gray">(SMW 2.3)</span></li>
+						<li class="fragment">Added full <span style="color:#17ff2e">PostgreSQL</span> support <span style="color:gray">(SMW 2.3)</span></li>
+					</ul>
+
+					<aside class="notes">12 minutes</aside>
 				</section>
 
 				<section>
@@ -236,10 +259,13 @@
 						</ul>
 
 						<p class="fragment"><strong>SQLStore feature parity!</strong></p>
+
+						<aside class="notes">13 minutes</aside>
 					</section>
 
 					<section data-background="img/nyandata.gif">
 						<img src="img/pic-or-not-happen.jpeg" height="600px" alt="Y U NO LOAD" class="fragment" />
+						<aside class="notes">14 minutes</aside>
 					</section>
 
 					<section>
@@ -261,6 +287,8 @@
 						</ul>
 
 						<p class="fragment">semantic-mediawiki.org/wiki/Compatibility</p>
+
+						<aside class="notes">15 minutes</aside>
 					</section>
 				</section>
 
@@ -274,23 +302,28 @@
 								<td><img src="img/much_win.png" height="250px" alt="Y U NO LOAD" /></td>
 							</tr>
 						</table>
+
+						<aside class="notes">16 minutes</aside>
 					</section>
 
 					<section>
 						<p>Experimental feature added in SMW 2.3</p>
 
 						<iframe width="700" height="525" src="https://www.youtube.com/embed/rXUPwmu5xCw" frameborder="0" allowfullscreen></iframe>
+
+						<aside class="notes">20 minutes</aside>
 					</section>
 				</section>
 
 				<section>
-					<section data-background="img/SemSearch1.png" data-transition="linear" data-background-transition="slide"></section>
-					<section data-background="img/SemSearch2.png" data-transition="linear" data-background-transition="slide"></section>
+					<section data-background="img/SemSearch1.png" data-transition="linear" data-background-transition="slide"><aside class="notes">21 minutes</aside></section>
+					<section data-background="img/SemSearch2.png" data-transition="linear" data-background-transition="slide"><aside class="notes">21 minutes</aside></section>
 				</section>
 
 				<section>
 					<section data-background="#005566">
 						<h3><span class="shadow">SMW 2.4 & 3.0</span></h3>
+						<aside class="notes">22 minutes</aside>
 					</section>
 
 					<section data-background="#005555">
@@ -303,6 +336,8 @@
 							<tr class="fragment"><th>SMW 2.4</th><td style="color: #17ff2e">1.19</td><td>1.20</td><td>1.21</td><td>1.22</td><td style="color: #17ff2e">1.23</td><td>1.24</td><td>1.25</td><td>1.26</td><td></td></tr>
 							<tr class="fragment"><th>SMW 3.0</th><td style="color: #17ff2e"></td><td></td><td></td><td></td><td style="color: #17ff2e">1.23</td><td>1.24</td><td>1.25</td><td>1.26</td><td style="color: #17ff2e">1.27</td></tr>
 						</table>
+
+						<aside class="notes">23 minutes</aside>
 					</section>
 
 					<section data-background="#006655">
@@ -323,12 +358,16 @@
 							<li class="fragment">Maintenance script aliases <small>such as SMW_setup.php (renamed in 2.0)</small></li>
 							<li class="fragment">Possibly Special:SemanticStatistics <small>(Special:Statistics since 1.9)</small></li>
 						</ul>
+
+						<aside class="notes">24 minutes</aside>
 					</section>
 
 					<section data-background="#006060">
 						<h3><span class="shadow">New features</span></h3>
 						<p class="fragment">New quantity type?</p>
 						<p class="fragment">Multilingual support??</p>
+
+						<aside class="notes">25 minutes</aside>
 					</section>
 				</section>
 
@@ -337,6 +376,8 @@
 						<h3><span class="shadow">Contributing to the project</span></h3>
 
 						<img src="img/teamwork.gif" />
+
+						<aside class="notes">26 minutes</aside>
 					</section>
 
 					<section data-background-video="img/why-u-no-play.webm">
@@ -352,6 +393,8 @@
 						</ul>
 
 						<p class="fragment shadow"><br />Small and simple contributions are much appreciated</p>
+
+						<aside class="notes">27 minutes</aside>
 					</section>
 				</section>
 
@@ -376,6 +419,7 @@
 					<ul>
 						<li class="shadow">The awesome work presented: <a href="https://semantic-mediawiki.org/wiki/Help:SMW_Project">SMW community</a></li>
 						<li class="shadow">Slides: CC BY-SA 3.0, <a href="https://twitter.com/#!/JeroenDeDauw">Jeroen De Dauw</a></li>
+						<li class="shadow">Included images variously licensed, often unknown</li>
 						<li class="shadow">Slide engine: <a href="http://lab.hakim.se/reveal-js/">reveal.js</a>, Copyright (C) 2015 Hakim El Hattab</li>
 					</ul>
 				</section>
