--- a/smwcon/2015fall/yearly/index.html
+++ b/smwcon/2015fall/yearly/index.html
@@ -50,8 +50,7 @@
 				<section>
 					<h2><span class="shadow">Yearly SMW overview</span></h2>
 					<p class="shadow">
-						Presentation by <a href="https://twitter.com/JeroenDeDauw">@JeroenDeDauw</a><br /><br />
-						bit.ly/smw-2015<br /><br />
+						Presentation by <a href="http://bn2vs.com">@JeroenDeDauw</a><br /><br />
 						<a href="https://semantic-mediawiki.org/wiki/SMWCon_Fall_2015/Current_Status_and_Next_Steps_for_Semantic_MediaWiki">SMWCon Fall 2015, Barcelona</a>
 					</p>
 
@@ -200,6 +199,11 @@
 						<img src="img/scrutinizer_rating.jpg" alt="Y U NO LOAD">
 						<aside class="notes">9 minutes</aside>
 					</section>
+				</section>
+
+				<section>
+					<p class="shadow" style="font-size: 60px">sandbox.semantic-mediawiki.org</p>
+					<aside class="notes">9 minutes</aside>
 				</section>
 
 				<section>
