--- a/smwcon/2015fall/yearly/index.html
+++ b/smwcon/2015fall/yearly/index.html
@@ -327,6 +327,9 @@
 				<section>
 					<section data-background="#005566">
 						<h3><span class="shadow">SMW 2.4 & 3.0</span></h3>
+
+						<img src="img/seefuture.jpg" height="200px" alt="Y U NO LOAD" />
+
 						<aside class="notes">22 minutes</aside>
 					</section>
 
