Remove reundant license ref

--- a/smwcon/2015fall/yearly/index.html
+++ b/smwcon/2015fall/yearly/index.html
@@ -415,7 +415,7 @@
 					<h3><span class="shadow">Special:Links</span></h3>
 					<ul>
 						<li><a href="http://bit.ly/smw-2014" class="shadow">View slides bit.ly/smw-2015</a></li>
-						<li><a href="https://github.com/JeroenDeDauw/slides/" class="shadow">Slides on GitHub</a> (CC BY-SA 3.0 licensed)</li>
+						<li><a href="https://github.com/JeroenDeDauw/slides/" class="shadow">Slides on GitHub</a></li>
 						<li><a href="https://semantic-mediawiki.org" class="shadow">semantic-mediawiki.org</a></li>
 						<li><a href="https://twitter.com/#!/SemanticMW" class="shadow">@SemanticMW on Twitter</a></li>
 					</ul>
