Make nav note more clear

--- a/smwcon/2015fall/yearly/index.html
+++ b/smwcon/2015fall/yearly/index.html
@@ -54,8 +54,8 @@
 						<a href="https://semantic-mediawiki.org/wiki/SMWCon_Fall_2015/Current_Status_and_Next_Steps_for_Semantic_MediaWiki">SMWCon Fall 2015, Barcelona</a>
 					</p>
 
-					<br />
-					<small>Use "page down" and "page up" to navigate</small>
+					<br /><small>Use "page down" and "page up" to navigate</small>
+					<br /><small>(No really - the arrow keys skip slides)</small>
 				</section>
 
 				<section>
