Fix typo: Rectange -> Rectangle

--- a/craftmanship/LSP/index.html
+++ b/craftmanship/LSP/index.html
@@ -108,7 +108,7 @@
 				<section>
 					<h3>The classic example</h3>
 					<pre><code contenteditable class="PHP">
-class Rectange {
+class Rectangle {
 	private $width;
 	private $height;
 	private $topLeftCorner;
@@ -135,7 +135,7 @@ class Rectange {
 					<h3>Too many fields</h3>
 
 					<pre><code contenteditable class="PHP">
-class Rectange {
+class Rectangle {
 	private $width;
 	private $height;
 	private $topLeftCorner;
