Added type hints

--- a/craftmanship/LSP/index.html
+++ b/craftmanship/LSP/index.html
@@ -344,10 +344,10 @@ class ComplexNumber {
         $this->realPart = $real;
         $this->imaginaryPart = $imaginary;
     }
-    public function getRealPart() {
+    public function getRealPart(): RealNumber {
         return $this->realPart;
     }
-    public function getImaginaryPart() {
+    public function getImaginaryPart(): RealNumber {
         return $this->imaginaryPart;
     }
 }
