Added slides link to LSP slides

--- a/craftmanship/LSP/index.html
+++ b/craftmanship/LSP/index.html
@@ -53,7 +53,7 @@
                     <p class="shadow">
                         <br />
                         Created by
-                        <a href="https://github.com/JeroenDeDauw">Jeroen De Dauw</a>
+                        <a href="https://entropywins.wtf/">Jeroen De Dauw</a>
                         for <a href="https://wikimedia.de/">Wikimedia Deutschland</a>
                         <br />
                         Licensed <a href="https://creativecommons.org/licenses/by-sa/3.0/">CC BY-SA 3.0</a>
@@ -419,7 +419,7 @@ function f( List&lt;Shape&gt; $list ) {
                     <p class="shadow">"Questions cat" by Linda Tanner, CC BY 2.0</p>
                     <p class="shadow">"Attribution cat" by Florencia Lewis, CC BY 2.0</p>
                     <p class="shadow">"The wall" by David R. Tribble, CC BY-SA 3.0</p>
-                    <p class="shadow">The slides by Jeroen De Dauw, CC BY-SA 3.0</p>
+                    <p class="shadow">The <a href="https://github.com/JeroenDeDauw/slides/tree/master/craftmanship/LSP">slides</a> by Jeroen De Dauw, CC BY-SA 3.0</p>
                 </section>
             </div>
 
