Split code section in LSP slides

--- a/craftmanship/LSP/index.html
+++ b/craftmanship/LSP/index.html
@@ -110,7 +110,8 @@ class FooBarLogger implements Logger {
 function doStuff( Logger $logger ) {
     $logger->warning( 'Stuff is being done. Slack is decreasing' );
 }
-
+                        </code></pre>
+                        <pre class="fragment"><code contenteditable class="PHP">
 doStuff( new FooBarLogger() ); // boom
                         </code></pre>
                     </section>
