Fix silly mixeup in LSP slides

--- a/craftmanship/LSP/index.html
+++ b/craftmanship/LSP/index.html
@@ -224,7 +224,7 @@ class Square extends Rectangle {
 					</code></pre>
 
 					<p class="fragment">Still somewhat odd</p>
-					<p class="fragment">Though behaves like a rectangle</p>
+					<p class="fragment">Though behaves like a square</p>
 				</section>
 
 				<section data-state="alert">
@@ -336,7 +336,7 @@ class Square {
                         <p>Integer <strong>is a</strong> real number</p>
                         <p class="fragment">Real number <strong>is a</strong> complex number</p>
                         <p class="fragment">Complex number <strong>contains</strong> two real number</p>
-    
+
                         <p class="fragment"><br />Makes perfect sense.<br />Free beer for who implements this and successfully instantiates a complex number</p>
                     </section>
 
