--- a/smwcon/2016fall/yearly/index.html
+++ b/smwcon/2016fall/yearly/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>Yearly SMW overview, SMWCon Fall 2016</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/black.css">
@@ -243,13 +243,13 @@
 				<section data-background="img/cat-questions.jpg" data-transition="linear" data-background-transition="slide">
 					<br /><br /><br /><br /><br /><h2><span class="shadow">Questions?</span></h2><br /><br /><br /><br />
 
-					<p class="shadow">bit.ly/smw-2016</p>
+					<p class="shadow">bit.ly/2016-smw</p>
 				</section>
 
 				<section data-transition="linear">
 					<h3><span class="shadow">Special:Links</span></h3>
 					<ul>
-						<li><a href="http://bit.ly/smw-2016" class="shadow">View slides bit.ly/smw-2016</a></li>
+						<li><a href="http://bit.ly/2016-smw" class="shadow">View slides bit.ly/2016-smw</a></li>
 						<li><a href="https://github.com/JeroenDeDauw/slides/" class="shadow">Slides on GitHub</a></li>
 						<li><a href="https://www.semantic-mediawiki.org" class="shadow">semantic-mediawiki.org</a></li>
 						<li><a href="https://twitter.com/#!/SemanticMW" class="shadow">@SemanticMW on Twitter</a></li>
